--- a/src/main/webapp/.gitignore
+++ b/src/main/webapp/.gitignore
@@ -3,9 +3,11 @@ node_modules
 jspm_packages
 npm-debug.*
 link-checker-results.txt
+app/*.js
 app/**/*.js
 app/**/**/*.js
 *.js.map
+e2e/*.js
 e2e/**/*.js
 e2e/**/*.js.map
 _test-output
